# vacancies_parser_project

./: README.md  pyproject.toml
src/: api.py  main.py  saver.py  vacancy.py
tests/: test_api.py  test_saver.py  test_vacancies.csv  test_vacancies.json  test_vacancy.py  tets_saver.py
